# duraark_assoc

./: CMakeLists.txt  Dockerfile
apps/: compute_associations.cpp
cmake/modules/: FindCereal.cmake  FindOPTIX.cmake
cmake/modules/self/: DuraarkAssocConfig.cmake
include/: associate_points.hpp  common.hpp  pairwise_color_points.def  utils.hpp
src/: associate_points.cpp  utils.cpp
